Additional zones built with static assets

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 		</header>
 		<main>
 			<div class="hero zone_1">
-				<h1 class="uppercase">Elevate your everyday</h1>
+				<h1 class="uppercase ogg">Elevate<span class="break"> your</span><span class="break"> everyday</span></h1>
 			</div>
 			<div class="zone_2">
-				<p class="uppercase">Engineered for expression</p>
+				<h2 class="uppercase gt-america">Engineered for expression</h2>
 			</div>
 			<div class="zone_3 flex">
 				<div><img src="" alt="The fusion collection a not-so-quiet expression of the true you." /></div>
@@ -50,15 +50,93 @@
 				<div><img src="" alt="The Aviator product shot." /></div>
 			</div>
 			<div class="zone_4">
-				<h2 class="uppercase"><a href="#" class="underline">Explore Best Sellers</a></h2>
+                <h2 class="uppercase ogg">Best Selling Styles</h1>
 			</div>
 			<div class="zone_5 flex">
-				<div><img src="" alt="The fusion collection a not-so-quiet expression of the true you." /></div>
-				<div><img src="" alt="Shop the Fusion Collection." /></div>
+				<div><img src="" alt="Sunglasses 1" /></div>
+				<div><img src="" alt="Sunglasses 2" /></div>
+                <div><img src="" alt="Sunglasses 3" /></div>
+				<div><img src="" alt="Sunglasses 4" /></div>
 			</div>
             <div class="zone_6">
-				<h2 class="uppercase">Best Selling Styles</h1>
+				<h2 class="uppercase gt-america"><a href="#" class="underline">Explore Best Sellers ></a></h2>
 			</div>
+            <div class="zone_7 flex">
+				<div><img src="" alt="The Sportsman." />
+                    <h2 class="uppercase underline">Shop The Sportsman ></h2>
+                </div>
+				<div><img src="" alt="The Sportsman. Experience the world-renowned quality." /></div>
+			</div>
+            <div class="zone_8">
+                <h2 class="uppercase ogg">#MYRANDOLPHS</h2>
+                <p>Seeing the world a little differently isn&apos;t just what you do - it&apos;s who you are.</p>
+                </div>
+                <div class="zone_9 flex">
+                    <div><img src="" alt="slider 1" /></div>
+                    <div><img src="" alt="slider 2" /></div>
+                    <div><img src="" alt="slider 3" /></div>
+                    <div><img src="" alt="slider 4" /></div>
+                    <div><img src="" alt="slider 5" /></div>
+                    <div><img src="" alt="slider 6" /></div>
+                    <div><img src="" alt="slider 7" /></div>
+                    <div><img src="" alt="slider 8" /></div>
+                </div>
+                <div class="zone_10">
+                    <h2>Get on the list!</h2>
+                    <p>Be the first to know about new releases and get early access to sales events.</p>
+                    <form action="#">
+                        <input id="email" type="text" placeholder="Please enter your email.">
+                        <button onclick="submitEmail(this)">Join the list ></button>
+                    </form>
+                </div>
+                <div class="zone_11">
+                    <ul>
+                        <li>
+                            <h2>New on the blog</h2>
+                            <ul>
+                                <li>Angel Flight NE x Randolph USA</li>
+                                <li>Engineered For Expression: Randolph Invites You to Ignite Your Best Self</li>
+                                <li>Randolph Partners with Iconic Japanese Designer, Junya Watanabe, for Brand Collaboration</li>
+                                <li>Randolph Launches Special Edition Military Aviator</li>
+                                <li>New VP of Product: Sunni Fleming</li>
+                                <li>The White House Gifts Randolph Sunglasses</li>
+                                <li>27 Year Old Vintage Aviator Sunglasses</li>
+                                <li>How to Replace Nose Pads on Sunglasses</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <h2>Service</h2>
+                            <ul>
+                                <li>Frames size guidelines</li>
+                                <li>Where is my order?</li>
+                                <li>Returns and Refunds</li>
+                                <li>Find a Retailer</li>
+                                <li>Register my frames</li>
+                                <li>Rx Prescriptions</li>
+                                <li>Lifetime Warranty</li>
+                                <li>Military Discount</li>
+                                <li>Reviews</li>
+                                <li>Careers</li>
+                                <li>Who's Wearing Randolphs</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <h2>Collections</h2>
+                            <ul>
+                                <li>Women's Best Sellers</li>
+                                <li>Men's Best Sellers</li>
+                                <li>Aviator Best Sellers</li>
+                                <li>Pilot Sunglasses</li>
+                                <li>Military Collection</li>
+                                <li>Blue Lens Sunglasses</li>
+                                <li>Cobalt Collection</li>
+                                <li>Mirrored Sunglasses</li>
+                                <li>Round Sunglasses</li>
+                            </ul>
+                        </li>
+                        <li></li>
+                    </ul>
+                </div>
 		</main>
 		<footer></footer>
 	</body>
